--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
     margin-top: auto;
   }
 
-  form input, form textarea {
+  form input, form textarea, form select {
     background: #3c007d;
     border: none;
     border-radius: 10px;
@@ -187,7 +187,7 @@
     color: #b0a9e6;
   }
 
-  form input:focus, form textarea:focus {
+  form input:focus, form textarea:focus, form select:focus {
     outline: none;
     background-color: #5a00bc;
   }
@@ -279,9 +279,7 @@
         "Подписчики": "10,500",
         "Средний охват за 24 часа": "2,600",
         "Вовлеченность (ERR)": "26%",
-        "Возраст канала": "1 год 7 месяцев",
-        "Реакции": "183",
-        "Пересылки": "8"
+        "Возраст канала": "1 год 7 месяцев"
       }
     },
     {
@@ -294,9 +292,7 @@
         "Подписчики": "6,000",
         "Средний охват за 24 часа": "574",
         "Вовлеченность (ERR)": "38%",
-        "Возраст канала": "1 год 5 месяцев",
-        "Реакции": "4",
-        "Пересылки": "2"
+        "Возраст канала": "1 год 5 месяцев"
       }
     },
     {
@@ -309,9 +305,7 @@
         "Подписчики": "3,500",
         "Средний охват за 24 часа": "773",
         "Вовлеченность (ERR)": "247%",
-        "Возраст канала": "1 год 11 месяцев",
-        "Реакции": "40",
-        "Пересылки": "11"
+        "Возраст канала": "1 год 11 месяцев"
       }
     },
     {
@@ -324,9 +318,7 @@
         "Подписчики": "3,000",
         "Средний охват за 24 часа": "649",
         "Вовлеченность (ERR)": "37%",
-        "Возраст канала": "1 год 6 месяцев",
-        "Реакции": "4",
-        "Пересылки": "4"
+        "Возраст канала": "1 год 6 месяцев"
       }
     }
   ];
