--- a/index.html
+++ b/index.html
@@ -1,432 +1,282 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>NikoAd — Реклама в Telegram</title>
-<style>
-  @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap');
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>NikoAd — Реклама в Telegram</title>
+  <style>
+    @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap');
 
-  * {
-    box-sizing: border-box;
-  }
+    * {
+      box-sizing: border-box;
+    }
 
-  body {
-    margin: 0;
-    font-family: 'Montserrat', sans-serif;
-    background: linear-gradient(135deg, #6a0dad, #12005e);
-    color: #f0f0f5;
-    min-height: 100vh;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 20px;
-  }
+    body {
+      margin: 0;
+      font-family: 'Montserrat', sans-serif;
+      background: linear-gradient(135deg, #6a0dad, #12005e);
+      color: #f0f0f5;
+      min-height: 100vh;
+      padding: 20px;
+    }
 
-  h1 {
-    margin-bottom: 20px;
-    text-align: center;
-    font-weight: 700;
-    letter-spacing: 2px;
-  }
+    h1 {
+      text-align: center;
+      font-size: 2rem;
+      font-weight: 700;
+      margin-bottom: 30px;
+    }
 
-  .channels {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 20px;
-    justify-content: center;
-    max-width: 900px;
-    margin-bottom: 40px;
-  }
-
-  .channel-card {
-    background: #2e005e;
-    border-radius: 12px;
-    padding: 20px;
-    width: 220px;
-    cursor: pointer;
-    box-shadow: 0 4px 15px rgba(106, 13, 173, 0.5);
-    transition: transform 0.3s ease, box-shadow 0.3s ease;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-  }
-
-  .channel-card:hover {
-    transform: translateY(-10px);
-    box-shadow: 0 8px 25px rgba(106, 13, 173, 0.8);
-  }
-
-  .channel-name a {
-    font-weight: 700;
-    font-size: 1.2rem;
-    margin-bottom: 10px;
-    color: #bf94ff;
-    text-decoration: none;
-  }
-  .channel-name a:hover {
-    text-decoration: underline;
-  }
-
-  .subscribers {
-    font-size: 0.9rem;
-    margin-bottom: 10px;
-    color: #b0a9e6;
-  }
-
-  .btn-show {
-    align-self: flex-start;
-    background: #8a2be2;
-    border: none;
-    border-radius: 8px;
-    padding: 8px 14px;
-    color: white;
-    font-weight: 600;
-    cursor: pointer;
-    transition: background-color 0.25s ease;
-  }
-
-  .btn-show:hover {
-    background: #bf94ff;
-  }
-
-  /* Модальное окно для статистики */
-  .modal {
-    position: fixed;
-    top: 0;
-    left: 0;
-    right:0;
-    bottom: 0;
-    background: rgba(0,0,0,0.8);
-    display: none;
-    justify-content: center;
-    align-items: center;
-    z-index: 1000;
-  }
-
-  .modal.active {
-    display: flex;
-  }
-
-  .modal-content {
-    background: #210044;
-    border-radius: 16px;
-    padding: 30px 40px;
-    max-width: 500px;
-    width: 90%;
-    color: #e3dbff;
-    box-shadow: 0 6px 30px rgba(106, 13, 173, 0.8);
-    position: relative;
-    overflow-y: auto;
-    max-height: 80vh;
-  }
-
-  .modal-close {
-    position: absolute;
-    top: 12px;
-    right: 16px;
-    background: #8a2be2;
-    border: none;
-    border-radius: 50%;
-    width: 32px;
-    height: 32px;
-    color: white;
-    font-weight: 700;
-    cursor: pointer;
-    font-size: 20px;
-    line-height: 28px;
-    text-align: center;
-    transition: background-color 0.3s ease;
-  }
-  .modal-close:hover {
-    background: #bf94ff;
-  }
-
-  .modal-header {
-    font-weight: 700;
-    font-size: 1.8rem;
-    margin-bottom: 20px;
-  }
-
-  .stat-item {
-    margin-bottom: 12px;
-    font-size: 1rem;
-  }
-  .stat-item span {
-    font-weight: 700;
-    color: #bf94ff;
-  }
-
-  /* Форма заявки */
-  form {
-    background: #2e005e;
-    max-width: 700px;
-    width: 100%;
-    border-radius: 14px;
-    padding: 25px 30px;
-    box-shadow: 0 6px 20px rgba(106, 13, 173, 0.7);
-    display: flex;
-    flex-direction: column;
-    margin-top: auto;
-  }
-
-  form input, form textarea, form select {
-    background: #3c007d;
-    border: none;
-    border-radius: 10px;
-    padding: 12px 14px;
-    margin-bottom: 15px;
-    font-size: 1rem;
-    color: #eee;
-    resize: vertical;
-    transition: background-color 0.3s ease;
-  }
-
-  form input::placeholder,
-  form textarea::placeholder {
-    color: #b0a9e6;
-  }
-
-  form input:focus, form textarea:focus, form select:focus {
-    outline: none;
-    background-color: #5a00bc;
-  }
-
-  form button {
-    background: #8a2be2;
-    border: none;
-    border-radius: 10px;
-    padding: 15px;
-    font-size: 1.1rem;
-    font-weight: 700;
-    color: white;
-    cursor: pointer;
-    transition: background-color 0.3s ease;
-  }
-
-  form button:hover {
-    background: #bf94ff;
-  }
-
-  #status {
-    margin-top: 10px;
-    min-height: 22px;
-    font-weight: 700;
-    color: #8efc8e;
-  }
-
-  /* Адаптив */
-  @media (max-width: 600px) {
     .channels {
-      flex-direction: column;
-      align-items: center;
+      display: flex;
+      flex-wrap: wrap;
+      gap: 20px;
+      justify-content: center;
+      margin-bottom: 40px;
     }
 
     .channel-card {
-      width: 90%;
+      background: #2e005e;
+      border-radius: 12px;
+      padding: 20px;
+      width: 250px;
+      transition: all 0.3s ease;
+      box-shadow: 0 4px 15px rgba(106, 13, 173, 0.4);
+    }
+
+    .channel-card:hover {
+      transform: translateY(-8px);
+      box-shadow: 0 6px 20px rgba(106, 13, 173, 0.7);
+    }
+
+    .channel-card h3 {
+      margin: 0 0 10px;
+      font-size: 1.1rem;
+    }
+
+    .channel-card .subs {
+      font-size: 0.9rem;
+      color: #b0a9e6;
+    }
+
+    .channel-card .price {
+      margin: 10px 0;
+      font-size: 0.9rem;
+    }
+
+    .channel-card a {
+      color: #bf94ff;
+      font-size: 0.85rem;
+      text-decoration: none;
     }
 
     form {
-      padding: 20px;
+      background: #210044;
+      max-width: 500px;
+      margin: 0 auto;
+      padding: 25px;
+      border-radius: 12px;
+      box-shadow: 0 4px 15px rgba(106, 13, 173, 0.5);
     }
-  }
-</style>
+
+    form input, form textarea, form select {
+      width: 100%;
+      margin-bottom: 15px;
+      padding: 12px;
+      border: none;
+      border-radius: 8px;
+      background: #3c007d;
+      color: white;
+      font-size: 1rem;
+    }
+
+    form button {
+      width: 100%;
+      padding: 14px;
+      background: #8a2be2;
+      border: none;
+      border-radius: 10px;
+      font-weight: 700;
+      color: white;
+      font-size: 1rem;
+      cursor: pointer;
+      transition: background 0.3s ease;
+    }
+
+    form button:hover {
+      background: #a658f5;
+    }
+
+    #priceResult {
+      text-align: center;
+      font-size: 1.2rem;
+      font-weight: 700;
+      margin-bottom: 15px;
+    }
+
+    @media(max-width:600px) {
+      .channel-card {
+        width: 90%;
+      }
+    }
+  </style>
 </head>
 <body>
 
 <h1>NikoAd — Реклама в Telegram</h1>
 
-<div class="channels" id="channels">
-  <!-- Карточки каналов -->
-</div>
-
-<!-- Модальное окно со статистикой -->
-<div class="modal" id="modal">
-  <div class="modal-content">
-    <button class="modal-close" id="modalClose">&times;</button>
-    <div class="modal-header" id="modalTitle"></div>
-    <div id="modalStats"></div>
-  </div>
-</div>
+<div class="channels" id="channels"></div>
 
 <form id="orderForm">
-  <input type="text" id="name" name="name" placeholder="Ваше имя" required />
-  <input type="text" id="tg" name="tg" placeholder="Telegram (@никнейм)" required />
-  <textarea id="msg" name="msg" placeholder="Текст рекламного поста" rows="4" required></textarea>
+  <input type="text" id="name" placeholder="Ваше имя" required />
+  <input type="text" id="tg" placeholder="Telegram (@username)" required />
+  <textarea id="post" rows="3" placeholder="Текст рекламного поста" required></textarea>
 
-  <label for="duration">Выберите время размещения:</label>
-  <select id="duration" name="duration" required>
-    <option value="24">24 часа - 1550₽</option>
-    <option value="48">48 часов - 1700₽</option>
-    <option value="72">72 часа - 1900₽</option>
+  <label for="channelSelect">Выберите каналы:</label>
+  <select id="channelSelect" multiple required></select>
+
+  <label for="durationSelect">Выберите время размещения:</label>
+  <select id="durationSelect" required>
+    <option value="24">24 часа</option>
+    <option value="48">48 часов</option>
+    <option value="72">72 часа</option>
+    <option value="forever">Навсегда</option>
+    <option value="story">История</option>
   </select>
 
-  <div style="margin: 10px 0; font-weight: 700; color: #bf94ff;" id="priceCalc">Цена: 1550₽</div>
+  <div id="priceResult">Итог: 0₽</div>
 
   <button type="submit">Отправить заявку</button>
   <div id="status"></div>
 </form>
 
 <script>
-  const channelsData = [
+  const channels = [
     {
-      id: 'tver',
-      name: 'Ищу Тебя Тверь',
+      id: "tver",
+      name: "Ищу Тебя Тверь",
+      link: "https://t.me/ishutebyatverr",
       subs: 10500,
-      link: 'https://t.me/ishutebyatverr',
-      prices: {24: 1550, 48: 1700, 72: 1900},
-      stats: {
-        "Подписчики": "10,500",
-        "Средний охват за 24 часа": "2,600",
-        "Вовлеченность (ERR)": "26%",
-        "Возраст канала": "1 год 7 месяцев"
+      prices: {
+        "24": 1550,
+        "48": 1700,
+        "72": 1900,
+        "forever": 2600,
+        "story": 1100
       }
     },
     {
-      id: 'nizhnevartovsk',
-      name: 'Ищу Тебя Нижневартовск',
+      id: "nizhnevartovsk",
+      name: "Ищу тебя Нижневартовск",
+      link: "https://t.me/nizhnevartovsk_dtp",
       subs: 6000,
-      link: 'https://t.me/nizhnevartovsk_dtp',
-      prices: {24: 1400, 48: 1600, 72: 1800},
-      stats: {
-        "Подписчики": "6,000",
-        "Средний охват за 24 часа": "574",
-        "Вовлеченность (ERR)": "38%",
-        "Возраст канала": "1 год 5 месяцев"
+      prices: {
+        "24": 1400,
+        "48": 1600,
+        "72": 1800,
+        "forever": 2200,
+        "story": 1100
       }
     },
     {
-      id: 'niko',
-      name: 'NIKO 🇦🇲',
+      id: "niko",
+      name: "NIKO 🇦🇲",
+      link: "https://t.me/nikotver",
       subs: 3500,
-      link: 'https://t.me/nikotver',
-      prices: {24: 1000, 48: 1150, 72: 1250},
-      stats: {
-        "Подписчики": "3,500",
-        "Средний охват за 24 часа": "773",
-        "Вовлеченность (ERR)": "247%",
-        "Возраст канала": "1 год 11 месяцев"
+      prices: {
+        "24": 1000,
+        "48": 1150,
+        "72": 1250,
+        "story": 800
       }
     },
     {
-      id: 'krasnoyarsk',
-      name: 'Ищу Тебя Красноярск',
+      id: "krasnoyarsk",
+      name: "Ищу Тебя Красноярск",
+      link: "https://t.me/ishutebyakrasnoyarsk",
       subs: 3000,
-      link: 'https://t.me/ishutebyakrasnoyarsk',
-      prices: {24: 800, 48: 1000, 72: 1150},
-      stats: {
-        "Подписчики": "3,000",
-        "Средний охват за 24 часа": "649",
-        "Вовлеченность (ERR)": "37%",
-        "Возраст канала": "1 год 6 месяцев"
+      prices: {
+        "24": 800,
+        "48": 1000,
+        "72": 1150,
+        "forever": 1300,
+        "story": 700
       }
     }
   ];
 
   const channelsContainer = document.getElementById('channels');
-  const modal = document.getElementById('modal');
-  const modalTitle = document.getElementById('modalTitle');
-  const modalStats = document.getElementById('modalStats');
-  const modalClose = document.getElementById('modalClose');
-  const orderForm = document.getElementById('orderForm');
-  const priceCalc = document.getElementById('priceCalc');
-  const durationSelect = document.getElementById('duration');
+  const channelSelect = document.getElementById('channelSelect');
+  const durationSelect = document.getElementById('durationSelect');
+  const priceResult = document.getElementById('priceResult');
   const statusDiv = document.getElementById('status');
 
-  let selectedChannel = null;
-
-  // Создаем карточки с ссылками и кнопками
-  channelsData.forEach(channel => {
+  // Показ карточек и опций
+  channels.forEach(ch => {
+    // карточка
     const card = document.createElement('div');
     card.className = 'channel-card';
     card.innerHTML = `
-      <div class="channel-name"><a href="${channel.link}" target="_blank">${channel.name}</a></div>
-      <div class="subscribers">Подписчиков: ${channel.subs.toLocaleString()}</div>
-      <button class="btn-show">Показать статистику</button>
+      <h3>${ch.name}</h3>
+      <div class="subs">Подписчиков: ${ch.subs.toLocaleString()}</div>
+      <div class="price">Пример: 24ч — ${ch.prices["24"]}₽</div>
+      <a href="${ch.link}" target="_blank">Открыть канал</a>
     `;
-    card.querySelector('.btn-show').addEventListener('click', () => {
-      openModal(channel);
-    });
     channelsContainer.appendChild(card);
+
+    // опции
+    const opt = document.createElement('option');
+    opt.value = ch.id;
+    opt.textContent = ch.name;
+    channelSelect.appendChild(opt);
   });
 
-  // Открыть модальное окно со статистикой
-  function openModal(channel) {
-    selectedChannel = channel;
-    modalTitle.textContent = channel.name;
-    modalStats.innerHTML = '';
-    for (const [key, value] of Object.entries(channel.stats)) {
-      const div = document.createElement('div');
-      div.className = 'stat-item';
-      div.innerHTML = `<span>${key}:</span> ${value}`;
-      modalStats.appendChild(div);
-    }
-    modal.classList.add('active');
-
-    // Обновляем цену по умолчанию
-    durationSelect.value = '24';
-    updatePrice();
+  // Пересчёт цены
+  function calculatePrice() {
+    const selectedChannels = Array.from(channelSelect.selectedOptions).map(o => o.value);
+    const duration = durationSelect.value;
+    let total = 0;
+    selectedChannels.forEach(cid => {
+      const channel = channels.find(c => c.id === cid);
+      if (channel && channel.prices[duration]) {
+        total += channel.prices[duration];
+      }
+    });
+    priceResult.textContent = `Итог: ${total}₽`;
   }
 
-  // Закрыть модальное окно
-  modalClose.addEventListener('click', () => {
-    modal.classList.remove('active');
-  });
+  channelSelect.addEventListener('change', calculatePrice);
+  durationSelect.addEventListener('change', calculatePrice);
 
-  // Обновление цены при смене времени
-  durationSelect.addEventListener('change', updatePrice);
-
-  function updatePrice() {
-    if (!selectedChannel) return;
-    const val = durationSelect.value;
-    const price = selectedChannel.prices[val] || 0;
-    priceCalc.textContent = `Цена: ${price}₽`;
-  }
-
-  // Отправка формы
-  orderForm.addEventListener('submit', async (e) => {
+  // Обработка формы
+  document.getElementById('orderForm').addEventListener('submit', async (e) => {
     e.preventDefault();
+    const name = document.getElementById('name').value.trim();
+    const tg = document.getElementById('tg').value.trim();
+    const post = document.getElementById('post').value.trim();
+    const channels = Array.from(channelSelect.selectedOptions).map(o => o.textContent).join(', ');
+    const duration = durationSelect.options[durationSelect.selectedIndex].text;
 
-    const name = orderForm.name.value.trim();
-    const tg = orderForm.tg.value.trim();
-    const msg = orderForm.msg.value.trim();
-    const duration = orderForm.duration.value;
-    if (!selectedChannel) {
-      statusDiv.textContent = '❌ Пожалуйста, выберите канал и посмотрите статистику.';
-      statusDiv.style.color = '#ff8e8e';
-      return;
-    }
-
-    const price = selectedChannel.prices[duration];
-
-    // Твой backend URL
-    const backendUrl = 'https://nikoad-server.onrender.com/api/send';
-
-    const data = {
-      name,
-      tg,
-      msg,
-      duration,
-      channel: selectedChannel.name,
-      price
-    };
+    const message = `📝 Новая заявка:\n👤 Имя: ${name}\n📱 Telegram: ${tg}\n📢 Каналы: ${channels}\n🕒 Время: ${duration}\n📄 Пост: ${post}`;
 
     try {
-      const res = await fetch(backendUrl, {
-        method: 'POST',
-        headers: {'Content-Type': 'application/json'},
-        body: JSON.stringify(data)
+      const res = await fetch("https://formspree.io/f/xnnvlzor", {
+        method: "POST",
+        headers: { 'Content-Type': 'application/json' },
+        body: JSON.stringify({ message })
       });
+
       if (res.ok) {
-        statusDiv.textContent = '✅ Заявка отправлена!';
-        statusDiv.style.color = '#8efc8e';
-        orderForm.reset();
+        statusDiv.textContent = "✅ Заявка успешно отправлена!";
+        statusDiv.style.color = "#8efc8e";
+        e.target.reset();
+        priceResult.textContent = 'Итог: 0₽';
       } else {
-        throw new Error('Ошибка отправки');
+        throw new Error();
       }
     } catch (err) {
-      statusDiv.textContent = '❌ Ошибка сети. Проверьте подключение.';
-      statusDiv.style.color = '#ff8e8e';
+      statusDiv.textContent = "❌ Ошибка при отправке заявки.";
+      statusDiv.style.color = "#ff8e8e";
     }
   });
 </script>
