--- a/index.html
+++ b/index.html
@@ -1,186 +1,257 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>NikoAd — Реклама в Telegram</title>
-  <style>
-    @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap');
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
+<title>NikoAd — Реклама в Telegram</title>
+<style>
+  @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap');
 
-    * {
-      box-sizing: border-box;
-    }
+  * {
+    box-sizing: border-box;
+  }
 
-    body {
-      margin: 0;
-      font-family: 'Montserrat', sans-serif;
-      background: linear-gradient(135deg, #6a0dad, #12005e);
-      color: #f0f0f5;
-      min-height: 100vh;
-      padding: 20px;
-    }
+  body {
+    margin: 0;
+    font-family: 'Montserrat', sans-serif;
+    background: linear-gradient(135deg, #6a0dad, #12005e);
+    color: #f0f0f5;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 20px;
+  }
 
-    h1 {
-      text-align: center;
-      font-size: 2rem;
-      font-weight: 700;
-      margin-bottom: 30px;
-    }
+  h1 {
+    margin-bottom: 20px;
+    text-align: center;
+    font-weight: 700;
+    letter-spacing: 2px;
+  }
 
+  .channels {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px;
+    justify-content: center;
+    max-width: 900px;
+    margin-bottom: 40px;
+  }
+
+  .channel-card {
+    background: #2e005e;
+    border-radius: 12px;
+    padding: 20px;
+    width: 220px;
+    cursor: default;
+    box-shadow: 0 4px 15px rgba(106, 13, 173, 0.5);
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+  }
+
+  .channel-card:hover {
+    transform: translateY(-10px);
+    box-shadow: 0 8px 25px rgba(106, 13, 173, 0.8);
+  }
+
+  .channel-name {
+    font-weight: 700;
+    font-size: 1.2rem;
+    margin-bottom: 10px;
+  }
+
+  .subscribers {
+    font-size: 0.9rem;
+    margin-bottom: 10px;
+    color: #b0a9e6;
+  }
+
+  .btn-show {
+    align-self: flex-start;
+    background: #8a2be2;
+    border: none;
+    border-radius: 8px;
+    padding: 8px 14px;
+    color: white;
+    font-weight: 600;
+    cursor: pointer;
+    transition: background-color 0.25s ease;
+    margin-top: 10px;
+  }
+
+  .btn-show:hover {
+    background: #bf94ff;
+  }
+
+  /* Форма заявки */
+  form {
+    display: flex;
+    flex-direction: column;
+    max-width: 700px;
+    width: 100%;
+  }
+
+  form input, form textarea, form select {
+    background: #3c007d;
+    border: none;
+    border-radius: 10px;
+    padding: 12px 14px;
+    margin-bottom: 15px;
+    font-size: 1rem;
+    color: #eee;
+    resize: vertical;
+    transition: background-color 0.3s ease;
+  }
+
+  form input::placeholder,
+  form textarea::placeholder {
+    color: #b0a9e6;
+  }
+
+  form input:focus, form textarea:focus, form select:focus {
+    outline: none;
+    background-color: #5a00bc;
+  }
+
+  form button {
+    background: #8a2be2;
+    border: none;
+    border-radius: 10px;
+    padding: 15px;
+    font-size: 1.1rem;
+    font-weight: 700;
+    color: white;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+  }
+
+  form button:hover {
+    background: #bf94ff;
+  }
+
+  #status {
+    margin-top: 10px;
+    min-height: 22px;
+    font-weight: 700;
+  }
+
+  /* Модальное окно статистики */
+  .modal-bg {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    background: rgba(18,0,94,0.85);
+    display: none;
+    justify-content: center;
+    align-items: center;
+    z-index: 1000;
+  }
+
+  .modal-bg.active {
+    display: flex;
+  }
+
+  .modal-content {
+    background: #210044;
+    border-radius: 15px;
+    padding: 30px;
+    width: 90%;
+    max-width: 600px;
+    color: #e3dbff;
+    box-shadow: 0 6px 20px rgba(106, 13, 173, 0.9);
+    overflow-y: auto;
+    max-height: 80vh;
+    position: relative;
+  }
+
+  .modal-header {
+    font-weight: 700;
+    font-size: 1.8rem;
+    margin-bottom: 15px;
+  }
+
+  .modal-close {
+    position: absolute;
+    top: 15px;
+    right: 20px;
+    background: #8a2be2;
+    border: none;
+    border-radius: 50%;
+    width: 30px;
+    height: 30px;
+    font-weight: 700;
+    color: white;
+    cursor: pointer;
+    font-size: 1.2rem;
+    line-height: 30px;
+    text-align: center;
+    transition: background-color 0.3s ease;
+  }
+
+  .modal-close:hover {
+    background: #bf94ff;
+  }
+
+  .stat-row {
+    margin-bottom: 10px;
+    font-size: 1rem;
+  }
+
+  .stat-row strong {
+    color: #bf94ff;
+  }
+
+  /* Анимации кнопок */
+  button, select, input, textarea {
+    transition: box-shadow 0.3s ease;
+  }
+  button:hover, select:hover, input:hover, textarea:hover {
+    box-shadow: 0 0 8px #bf94ff;
+  }
+
+  /* Адаптив */
+  @media (max-width: 600px) {
     .channels {
-      display: flex;
-      flex-wrap: wrap;
-      gap: 20px;
-      justify-content: center;
-      margin-bottom: 40px;
+      flex-direction: column;
+      align-items: center;
     }
 
     .channel-card {
-      background: #2e005e;
-      border-radius: 12px;
+      width: 90%;
+    }
+
+    .modal-content {
+      max-height: 90vh;
       padding: 20px;
-      width: 250px;
-      transition: all 0.3s ease;
-      box-shadow: 0 4px 15px rgba(106, 13, 173, 0.4);
     }
-
-    .channel-card:hover {
-      transform: translateY(-8px);
-      box-shadow: 0 6px 20px rgba(106, 13, 173, 0.7);
-    }
-
-    .channel-card h3 {
-      margin: 0 0 10px;
-      font-size: 1.1rem;
-    }
-
-    .channel-card .subs {
-      font-size: 0.9rem;
-      color: #b0a9e6;
-    }
-
-    .channel-card a {
-      color: #bf94ff;
-      font-size: 0.85rem;
-      text-decoration: none;
-    }
-
-    .channel-card button {
-      margin-top: 10px;
-      background: #8a2be2;
-      color: white;
-      border: none;
-      padding: 10px 14px;
-      border-radius: 8px;
-      cursor: pointer;
-      font-weight: 600;
-    }
-
-    .channel-card button:hover {
-      background: #a658f5;
-    }
-
-    .stats {
-      background: #210044;
-      max-width: 600px;
-      margin: 0 auto 30px;
-      padding: 20px;
-      border-radius: 12px;
-      box-shadow: 0 4px 15px rgba(106, 13, 173, 0.5);
-      display: none;
-    }
-
-    .stats.active {
-      display: block;
-    }
-
-    .stats h3 {
-      margin-top: 0;
-      font-size: 1.3rem;
-      margin-bottom: 10px;
-    }
-
-    .stats ul {
-      list-style: none;
-      padding-left: 0;
-    }
-
-    .stats ul li {
-      margin-bottom: 5px;
-    }
-
-    form {
-      background: #210044;
-      max-width: 500px;
-      margin: 0 auto;
-      padding: 25px;
-      border-radius: 12px;
-      box-shadow: 0 4px 15px rgba(106, 13, 173, 0.5);
-    }
-
-    form input, form textarea, form select {
-      width: 100%;
-      margin-bottom: 15px;
-      padding: 12px;
-      border: none;
-      border-radius: 8px;
-      background: #3c007d;
-      color: white;
-      font-size: 1rem;
-    }
-
-    form button {
-      width: 100%;
-      padding: 14px;
-      background: #8a2be2;
-      border: none;
-      border-radius: 10px;
-      font-weight: 700;
-      color: white;
-      font-size: 1rem;
-      cursor: pointer;
-      transition: background 0.3s ease;
-    }
-
-    form button:hover {
-      background: #a658f5;
-    }
-
-    #priceResult {
-      text-align: center;
-      font-size: 1.2rem;
-      font-weight: 700;
-      margin-bottom: 15px;
-    }
-
-    @media(max-width:600px) {
-      .channel-card {
-        width: 90%;
-      }
-    }
-  </style>
+  }
+</style>
 </head>
 <body>
 
 <h1>NikoAd — Реклама в Telegram</h1>
 
-<div class="channels" id="channels"></div>
-
-<div class="stats" id="statsPanel">
-  <h3 id="statsTitle">Статистика канала</h3>
-  <ul id="statsPrices"></ul>
+<div class="channels" id="channels">
+  <!-- Карточки каналов -->
 </div>
 
+<!-- Форма заявки -->
 <form id="orderForm">
-  <input type="text" id="name" placeholder="Ваше имя" required />
-  <input type="text" id="tg" placeholder="Telegram (@username)" required />
-  <textarea id="post" rows="3" placeholder="Текст рекламного поста" required></textarea>
+  <h2>Отправить заявку</h2>
+  <input type="text" id="name" name="name" placeholder="Ваше имя" required />
+  <input type="text" id="tg" name="tg" placeholder="Telegram (@никнейм)" required />
+  <textarea id="msg" name="msg" placeholder="Рекламный пост" rows="3" required></textarea>
 
-  <label for="channelSelect">Выберите каналы:</label>
-  <select id="channelSelect" multiple required></select>
+  <label for="channelSelect">Выберите канал(ы) для рекламы:</label>
+  <select id="channelSelect" name="channels" multiple size="4" required></select>
 
-  <label for="durationSelect">Выберите время размещения:</label>
-  <select id="durationSelect" required>
+  <label for="timeSelect">Выберите время размещения:</label>
+  <select id="timeSelect" name="time" required>
     <option value="24">24 часа</option>
     <option value="48">48 часов</option>
     <option value="72">72 часа</option>
@@ -188,160 +259,194 @@
     <option value="story">История</option>
   </select>
 
-  <div id="priceResult">Итог: 0₽</div>
+  <div><strong>Итоговая цена: <span id="totalPrice">0 ₽</span></strong></div>
 
   <button type="submit">Отправить заявку</button>
   <div id="status"></div>
 </form>
 
+<!-- Модальное окно статистики -->
+<div class="modal-bg" id="modal">
+  <div class="modal-content" id="modalContent">
+    <button class="modal-close" id="modalClose">&times;</button>
+    <div id="modalTitle" class="modal-header"></div>
+    <div id="modalStats"></div>
+  </div>
+</div>
+
 <script>
-  const channels = [
+  const channelsData = [
     {
-      id: "tver",
-      name: "Ищу Тебя Тверь",
-      link: "https://t.me/ishutebyatverr",
+      id: 'tver',
+      name: 'Ищу Тебя Тверь',
       subs: 10500,
+      link: 'https://t.me/ishutebyatverr',
       prices: {
-        "24": 1550,
-        "48": 1700,
-        "72": 1900,
-        "forever": 2600,
-        "story": 1100
+        '24': 1550,
+        '48': 1700,
+        '72': 1900,
+        'forever': 2600,
+        'story': 1100
+      },
+      stats: {
+        subscribers: 10500,
+        telegramAds: '4.9',
+        upChannels: 41,
+        mentions: 54,
+        reposts: 109,
+        citationIndex: 2790,
+        ERR24: '24%',
+        avgReach12h: 2100,
+        avgReach24h: 2600,
+        avgReach48h: 2700,
+        channelAge: '1 год 7 месяцев',
+        createdDate: '07.11.2023',
+        addedDate: '13.11.2023',
+        avgRead24h: '24%',
+        ERR: '0.49%',
+        genderMale: '55.8%',
+        genderFemale: '44.2%',
       }
     },
     {
-      id: "nizhnevartovsk",
-      name: "Ищу тебя Нижневартовск",
-      link: "https://t.me/nizhnevartovsk_dtp",
+      id: 'nizhnevartovsk',
+      name: 'Ищу Тебя Нижневартовск',
       subs: 6000,
+      link: 'https://t.me/nizhnevartovsk_dtp',
       prices: {
-        "24": 1400,
-        "48": 1600,
-        "72": 1800,
-        "forever": 2200,
-        "story": 1100
+        '24': 1400,
+        '48': 1600,
+        '72': 1800,
+        'forever': 2200,
+        'story': 1100
+      },
+      stats: {
+        subscribers: 6000,
+        ERR: '43.7%',
+        ERR24: '36.3%',
+        avgReach12h: 1800,
+        avgReach24h: 2200,
+        avgReach48h: 2400,
+        channelAge: '2 года 11 месяцев',
+        createdDate: '01.07.2022',
+        addedDate: '01.01.2024',
+        avgRead24h: '37%',
+        genderMale: '',
+        genderFemale: '',
       }
     },
     {
-      id: "niko",
-      name: "NIKO 🇦🇲",
-      link: "https://t.me/nikotver",
+      id: 'niko',
+      name: 'NIKO 🇦🇲',
       subs: 3500,
+      link: 'https://t.me/nikotver',
       prices: {
-        "24": 1000,
-        "48": 1150,
-        "72": 1250,
-        "story": 800
+        '24': 1000,
+        '48': 1150,
+        '72': 1250,
+        'story': 800
+      },
+      stats: {
+        subscribers: 3500,
+        ERR: '247%',
+        ERR24: '21.7%',
+        avgReach12h: 715,
+        avgReach24h: 773,
+        avgReach48h: 865,
+        channelAge: '1 год 11 месяцев',
+        createdDate: '06.07.2023',
+        addedDate: '28.04.2024',
+        avgRead24h: '22%',
+        genderMale: '',
+        genderFemale: '',
       }
     },
     {
-      id: "krasnoyarsk",
-      name: "Ищу Тебя Красноярск",
-      link: "https://t.me/ishutebyakrasnoyarsk",
+      id: 'krasnoyarsk',
+      name: 'Ищу Тебя Красноярск',
       subs: 3000,
+      link: 'https://t.me/ishutebyakrasnoyarsk',
       prices: {
-        "24": 800,
-        "48": 1000,
-        "72": 1150,
-        "forever": 1300,
-        "story": 700
+        '24': 800,
+        '48': 1000,
+        '72': 1150,
+        'forever': 1300,
+        'story': 700
+      },
+      stats: {
+        subscribers: 3000,
+        ERR: '38%',
+        ERR24: '20%',
+        avgReach12h: 484,
+        avgReach24h: 574,
+        avgReach48h: 649,
+        channelAge: '1 год 5 месяцев',
+        createdDate: '13.01.2024',
+        addedDate: '17.01.2024',
+        avgRead24h: '20%',
+        genderMale: '',
+        genderFemale: '',
       }
-    }
+    },
   ];
 
   const channelsContainer = document.getElementById('channels');
-  const statsPanel = document.getElementById('statsPanel');
-  const statsTitle = document.getElementById('statsTitle');
-  const statsPrices = document.getElementById('statsPrices');
   const channelSelect = document.getElementById('channelSelect');
-  const durationSelect = document.getElementById('durationSelect');
-  const priceResult = document.getElementById('priceResult');
+  const timeSelect = document.getElementById('timeSelect');
+  const totalPriceSpan = document.getElementById('totalPrice');
+  const orderForm = document.getElementById('orderForm');
   const statusDiv = document.getElementById('status');
 
-  channels.forEach(ch => {
-    // Карточка канала
+  const modal = document.getElementById('modal');
+  const modalClose = document.getElementById('modalClose');
+  const modalTitle = document.getElementById('modalTitle');
+  const modalStats = document.getElementById('modalStats');
+
+  // Создаем карточки каналов
+  channelsData.forEach(ch => {
     const card = document.createElement('div');
     card.className = 'channel-card';
     card.innerHTML = `
-      <h3>${ch.name}</h3>
-      <div class="subs">Подписчиков: ${ch.subs.toLocaleString()}</div>
-      <a href="${ch.link}" target="_blank">Ссылка на канал</a><br>
-      <button onclick="showStats('${ch.id}')">Показать статистику</button>
+      <div class="channel-name">${ch.name}</div>
+      <div class="subscribers">Подписчиков: ${ch.subs.toLocaleString()}</div>
+      <button class="btn-show">Показать статистику</button>
     `;
+
+    const btn = card.querySelector('.btn-show');
+    btn.addEventListener('click', () => openModal(ch));
+
     channelsContainer.appendChild(card);
 
-    // Опции в форме
-    const opt = document.createElement('option');
-    opt.value = ch.id;
-    opt.textContent = ch.name;
-    channelSelect.appendChild(opt);
+    // Добавляем в селект для выбора каналов
+    const option = document.createElement('option');
+    option.value = ch.id;
+    option.textContent = ch.name;
+    channelSelect.appendChild(option);
   });
 
-  function showStats(channelId) {
-    const ch = channels.find(c => c.id === channelId);
-    if (!ch) return;
-
-    statsTitle.textContent = ch.name + ' — подписчиков: ' + ch.subs.toLocaleString();
-    statsPrices.innerHTML = '';
-    for (const [key, price] of Object.entries(ch.prices)) {
-      let label = key === "24" ? "24 часа" :
-                  key === "48" ? "48 часов" :
-                  key === "72" ? "72 часа" :
-                  key === "forever" ? "Навсегда" : "История";
-      statsPrices.innerHTML += `<li>${label}: ${price}₽</li>`;
-    }
-
-    statsPanel.classList.add('active');
-    window.scrollTo({ top: statsPanel.offsetTop - 20, behavior: 'smooth' });
-  }
-
-  function calculatePrice() {
-    const selectedChannels = Array.from(channelSelect.selectedOptions).map(o => o.value);
-    const duration = durationSelect.value;
+  // Обновляем цену при выборе каналов или времени
+  function updatePrice() {
+    const selectedChannels = Array.from(channelSelect.selectedOptions).map(opt => opt.value);
+    const selectedTime = timeSelect.value;
     let total = 0;
-    selectedChannels.forEach(cid => {
-      const channel = channels.find(c => c.id === cid);
-      if (channel && channel.prices[duration]) {
-        total += channel.prices[duration];
-      }
+    selectedChannels.forEach(id => {
+      const ch = channelsData.find(c => c.id === id);
+      if (!ch) return;
+      if (ch.prices[selectedTime] !== undefined) total += ch.prices[selectedTime];
     });
-    priceResult.textContent = `Итог: ${total}₽`;
+    totalPriceSpan.textContent = total.toLocaleString('ru-RU') + ' ₽';
   }
 
-  channelSelect.addEventListener('change', calculatePrice);
-  durationSelect.addEventListener('change', calculatePrice);
+  channelSelect.addEventListener('change', updatePrice);
+  timeSelect.addEventListener('change', updatePrice);
 
-  document.getElementById('orderForm').addEventListener('submit', async (e) => {
-    e.preventDefault();
-    const name = document.getElementById('name').value.trim();
-    const tg = document.getElementById('tg').value.trim();
-    const post = document.getElementById('post').value.trim();
-    const channelsList = Array.from(channelSelect.selectedOptions).map(o => o.textContent).join(', ');
-    const duration = durationSelect.options[durationSelect.selectedIndex].text;
-
-    const message = `📝 Новая заявка:\n👤 Имя: ${name}\n📱 Telegram: ${tg}\n📢 Каналы: ${channelsList}\n🕒 Время: ${duration}\n📄 Пост: ${post}`;
-
-    try {
-      const res = await fetch("https://formspree.io/f/xnnvlzor", {
-        method: "POST",
-        headers: { 'Content-Type': 'application/json' },
-        body: JSON.stringify({ message })
-      });
-
-      if (res.ok) {
-        statusDiv.textContent = "✅ Заявка успешно отправлена!";
-        statusDiv.style.color = "#8efc8e";
-        e.target.reset();
-        priceResult.textContent = 'Итог: 0₽';
-      } else {
-        throw new Error();
-      }
-    } catch (err) {
-      statusDiv.textContent = "❌ Ошибка при отправке заявки.";
-      statusDiv.style.color = "#ff8e8e";
-    }
-  });
-</script>
-
-</body>
-</html>
+  // Модальное окно — показать статистику
+  function openModal(channel) {
+    modalTitle.innerHTML = `<a href="${channel.link}" target="_blank" style="color:#bf94ff; text-decoration:none;">${channel.name}</a>`;
+    // Формируем содержимое статистики
+    let html = `
+      <div class="stat-row"><strong>Подписчиков:</strong> ${channel.stats.subscribers.toLocaleString()}</div>
+      <div class="stat-row"><strong>Telegram Ads:</strong> ${channel.stats.telegramAds || '-'}</div>
+      <div class="stat-row"><strong>Упоминания каналов:</strong> ${channel.stats.upChannels || '-'}</div>
+      <div class="stat-row"><strong>Упоминания:</strong> ${channel.stats.mentions || '-'}</div>
+      <div class="stat
